# migraticorn

./: LICENSE  README.md  pyproject.toml
src/: cli.py
