[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "migraticorn"
version = "0.1.0"
description = "A Majestic Static Site Deployment Tool"
authors = [{ name = "RT Nate", email = "info@rtelectronix.com" }]
requires-python = ">=3.6"
license = { text = "MIT" }
readme = "README.md"

[project.scripts]
migraticorn = "migraticorn.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["migraticorn"]
